--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 /node_modules
 /public/storage
-/storage/*.key
-/vendor
+/public/.htaccess
+/storage/
+/vendor/
+/storage/
+/tests/
+/nbproject/
+/db/
+/public/uploads/
 /.idea
-Homestead.json
-Homestead.yaml
 .env
